fixing scrolling and adding Course3

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section>
-        <h2>Getting Started with Git and GitHub</h2>
+        <h2><a href="/src/Course3/gitHub.html" target="_blank">Getting Started with Git and GitHub</a></h2>
         <ul>
             <li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
             <li>Explain basic Git concepts such as repositories and branches used for distributed version control and
