creating files for the courses

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
 
     <section>
-        <h2>JavaScript Programming Essentials</h2>
+        <h2><a href="/src/Course4/javascriptEssentials.html" target="_blank">JavaScript Programming Essentials</a></h2>
         <ul>
             <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore
                 arrays, DOM, AJAX, and debugging techniques.</li>
@@ -64,7 +64,7 @@
     </section>
 
     <section>
-        <h2>Developing Front-End Apps with React</h2>
+    <h2><a href="/src/Course5/reactDevelopment.html" target="_blank">Developing Front-End Apps with React</a></h2>
         <ul>
             <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including
                 React, JSX, and ES6.</li>
@@ -75,7 +75,7 @@
     </section>
 
     <section>
-        <h2>Developing Back-End Apps with Node.js and Express</h2>
+        <h2><a href="/src/Course6/nodeExpress.html" target="_blank">Developing Back-End Apps with Node.js and Express</a></h2>
         <ul>
             <li>Create server-side applications using the Node.js JavaScript runtime.</li>
             <li>Extend your Node.js applications with third-party packages and frameworks, including Express.</li>
@@ -85,7 +85,7 @@
     </section>
 
     <section>
-        <h2>Get Started With Cloud Native, DevOps, and NoSQL</h2>
+        <h2><a href="/src/Course7/cloudDevOps.html" target="_blank">Get Started With Cloud Native, DevOps, and NoSQL</a></h2>
         <ul>
             <li>Explore cloud-native applications concepts and methodologies, recognize CNCF’s impact, and analyze the
                 benefits of CI/CD, Agile, and Scrum.</li>
@@ -99,7 +99,7 @@
     </section>
 
     <section>
-        <h2>Introduction to Containers with Docker, Kubernetes & OpenShift</h2>
+        <h2><a href="/src/Course8/dockerKubernetes.html" target="_blank">Introduction to Containers with Docker, Kubernetes & OpenShift</a></h2>
         <ul>
             <li>Using containers, learn how to move applications quickly across any environment.</li>
             <li>Build cloud-native applications using Docker, Kubernetes, OpenShift, and Istio.</li>
@@ -111,7 +111,7 @@
     </section>
 
     <section>
-        <h2>Application Development using Microservices and Serverless</h2>
+        <h2><a href="/src/Course9/microservices.html" target="_blank">Application Development using Microservices and Serverless</a></h2>
         <ul>
             <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic
                 architectures.</li>
@@ -124,7 +124,7 @@
     </section>
 
     <section>
-        <h2>Node.js & MongoDB: Developing Back-end Database Applications</h2>
+        <h2><a href="/src/Course10/nodeMongoDB.html" target="_blank">Node.js & MongoDB: Developing Back-end Database Applications</a></h2>
         <ul>
             <li>Implement fundamental back-end development concepts with Node, Express, and NoSQL databases.</li>
             <li>Develop secure RESTful APIs using Node and Express to communicate with databases.</li>
@@ -134,7 +134,7 @@
     </section>
 
     <section>
-        <h2>JavaScript Full Stack Capstone Project</h2>
+        <h2><a href="/src/Course11/fullStackProject.html" target="_blank">JavaScript Full Stack Capstone Project</a></h2>
         <ul>
             <li>Integrate and apply your JavaScript, React, Node.js, Express, and MongoDB skills.</li>
             <li>Build a real-world web application using front-end and back-end technologies.</li>
@@ -144,7 +144,7 @@
     </section>
 
     <section>
-        <h2>Software Developer Career Guide and Interview Preparation</h2>
+        <h2><a href="/src/Course12/careerGuide.html" target="_blank">Software Developer Career Guide and Interview Preparation</a></h2>
         <ul>
             <li>Describe the role of a software engineer and some career path options as well as the prospective
                 opportunities in the field.</li>
