--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@
         </ul>
     </section>
 
+    <section>
+        <h2>Additional Resources</h2>
+        <ul>
+            <li>Use Leetcode for learning.</li>
+            <li>Use developer roadmaps (roadmap.sh)</li>
+            <li>YouTube, StackOverFlow, and LLM's are great teachers.</li>
+        </ul>
+    </section>
+
     <footer>
         <p>© 2025 VanillaScript. All rights reserved.</p>
     </footer>
