--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     <section>
         <h2>Additional Resources</h2>
         <ul>
-            <li>Use Leetcode for learning.</li>
-            <li>Use developer roadmaps (roadmap.sh)</li>
+            <li>Use <a href="https://leetcode.com/problems/create-hello-world-function/description/?envType=study-plan-v2&envId=30-days-of-javascript" target="_blank">Leetcode for learning.</a></li>
+            <li>Use <a href="https://roadmap.sh/full-stack" target="_blank">developer roadmaps</a></li>
             <li>YouTube, StackOverFlow, and LLM's are great teachers.</li>
         </ul>
     </section>
