--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             <li>Use <a href="https://leetcode.com/problems/create-hello-world-function/description/?envType=study-plan-v2&envId=30-days-of-javascript" target="_blank">Leetcode for learning.</a></li>
             <li>Use <a href="https://roadmap.sh/full-stack" target="_blank">developer roadmaps</a></li>
             <li>YouTube, StackOverFlow, and LLM's are great teachers.</li>
+            <li><a href="https://www.coursera.org/professional-certificates/ibm-full-stack-javascript-developer" target="_blank">Coursera FullStack JavaScript Dev</a></li>
         </ul>
     </section>
 
