intro to software engineering curriculum added

--- a/src/Course1/introToSoftware.html
+++ b/src/Course1/introToSoftware.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Intro To Software Engineering</h1>
+    <ul>
+        <li>SDLC - The Software Development Cycle</li>
+        <li>Introduction to Software Development</li>
+        <li>Basics of Programming</li>
+        <li>Software Architecture, Design, and Patterns</li>
+        <li>Job Opportunities and Skillsets in Software Engineering</li>
+        <li>Final Activity and Quiz</li>
+    </ul>
 </body>
 </html>
