adding course 1 curriculum

--- a/src/Course1/introToSoftware.html
+++ b/src/Course1/introToSoftware.html
@@ -9,11 +9,73 @@
     <h1>Intro To Software Engineering</h1>
     <ul>
         <li>SDLC - The Software Development Cycle</li>
+        <ul>
+            <li>This module provides you with an overview to the field of software engineering. In the first lesson of this module, you will be introduced to the field of software engineering, and learn about the software development lifecycle (SDLC), elements of building high-quality software, and writing requirements. In lesson two you will explore different approaches to building software and different career opportunities related to software development. You will also hear from experienced practitioners in the field and learn how different roles interact and work with each other as a team in order to develop enterprise-level software.</li>
+            <ul>
+                <li>What is Software Engineering?</li>
+                <li>Intro to the SDLC</li>
+                <li>Phases of the SDLC</li>
+                <li>Building Quality Software</li>
+                <li>Requirements</li>
+                <li>Software Development Methodologies</li>
+                <li>Software Versions</li>
+                <li>Software Testing</li>
+                <li>Software Documentation</li>
+                <li>Roles in Software Engineering Projects</li>
+            </ul>
+        </ul>
         <li>Introduction to Software Development</li>
+        <ul>
+            <li>This module introduces you to the concepts of application development. In lesson 1 you’ll learn about the differences in front-end and back-end development in web and cloud applications and the technologies used in both. You’ll also learn about how working in teams and pairs can enhance the development process and make it more efficient. In lesson 2 you will explore many of the application development tools that a software engineer uses to write, test, and release code and be introduced to software stacks that support the execution of an application. Finally, in the hands-on lab, you’ll learn how to use an integrated development environment (IDE) to develop and run code.</li>
+            <ul>
+                <li>Learning Front-End Development</li>
+                <li>The Importance of Back-End Development</li>
+                <li>Teamwork and Squads</li>
+                <li>Pair Programming</li>
+                <li>Introducing Application Development Tools</li>
+                <li>More Application Development Tools</li>
+                <li>Introduction to Software Stacks</li>
+            </ul>
+        </ul>
         <li>Basics of Programming</li>
+        <ul>
+            <li>This module introduces you to the basics of programming. In the first lesson, you will learn about the different categories of programming languages and the scenarios to which each is suited. You’ll also learn how to plan and organize your code effectively. In lesson 2 you will explore basic programming logic and investigate programming concepts such as identifiers, functions, and objects. Finally, in the hands-on lab, you’ll learn how to write simple Python code.</li>
+            <ul>
+                <li>Interpreted and Compiled Programming Languages</li>
+                <li>Comparing Compiled and Interpreted Programming Languages</li>
+                <li>Query and Assembly Programming Languages</li>
+                <li>Understanding Code Organization Methods</li>
+                <li>Branching and Looping Programming Logic</li>
+                <li>Introduction to Programming Concepts Part 1</li>
+                <li>Introduction to Programming Concepts Part 2</li>
+            </ul>
+        </ul>
         <li>Software Architecture, Design, and Patterns</li>
+        <ul>
+            <li>In this module, you will learn about the foundations of enterprise software development. Lesson 1 introduces you to software architecture and explains the importance of well-designed architecture. You will also learn about the design process, including structural design, behavioral models, and how you can create unified modeling language (UML) diagrams to communicate a software’s structure and behavior to all team members. You will also consider object-oriented analysis and design (OOAD). In Lesson 2 you will explore a variety of architectural patterns that support the architectural design process in a hands-on activity. Lastly, you will learn about the software production environment and some of the components required for deployment.</li>
+            <ul>
+                <li>Introduction to Software Architecture</li>
+                <li>Software Design and Modeling</li>
+                <li>Object-Oriented Analysis and Design</li>
+                <li>Approaches to Application Architecture</li>
+                <li>Architectural Patterns in Software</li>
+                <li>Application Deployment Environments</li>
+                <li>Application Deployment Components</li>
+            </ul>
+        </ul>
         <li>Job Opportunities and Skillsets in Software Engineering</li>
-        <li>Final Activity and Quiz</li>
+        <ul>
+            <li>In this module, you will learn about the tasks of a software engineer and what they do on a day-to-day basis. You will discover the hard and soft skills needed to become a successful software engineer. You will also investigate the job outlook for a software engineer, get a clear understanding of different software engineering career paths, and learn about various software engineering job titles and the responsibilities of those roles. You will also learn about the software engineering code of ethics.</li>
+            <ul>
+                <li>What Does a Software Engineer Do?</li>
+                <li>A Day in the Life of a Software Engineer</li>
+                <li>Skills Required for Software Engineering</li>
+                <li>Job Outlook for Software Engineers</li>
+                <li>Career Paths in Software Engineering</li>
+                <li>Software Engineering Job Titles</li>
+                <li>Code of Ethics</li>
+            </ul>
+        </ul>
     </ul>
 </body>
 </html>
