--- a/src/Course2/introToTrifecta.html
+++ b/src/Course2/introToTrifecta.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>Intro To HTML, CSS, and JS</h1>
+    <ul>
+        <li>HTML Overview</li>
+        <li>CSS Overview & HTML5 Overview</li>
+        <li>JavaScript Programming for Web Applications</li>
+        <li>Career Opportunities and Final Project</li>
+    </ul>
 </body>
 </html>
