intro to html, css, and js

--- a/src/Course2/introToTrifecta.html
+++ b/src/Course2/introToTrifecta.html
@@ -1,17 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro To HTML, CSS, and JS</title>
 </head>
+
 <body>
     <h1>Intro To HTML, CSS, and JS</h1>
     <ul>
         <li>HTML Overview</li>
-        <li>CSS Overview & HTML5 Overview</li>
-        <li>JavaScript Programming for Web Applications</li>
-        <li>Career Opportunities and Final Project</li>
+        <ul>
+            <li>The most fundamental tools for front-end developers are the languages they use for developing the
+                website or app.
+                Foremost among these languages is HyperText Markup Language (HTML). A thorough understanding of HTML,
+                its features,
+                support, and scripting capabilities makes a solid foundation for you to build your development skills
+                on.</li>
+            <li>Course Introduction</li>
+            <li>Introduction to HTML</li>
+            <li>HTML Features</li>
+            <li>HTML Management and Support</li>
+            <li>HTML Scripting</li>
+            <li>Browser Support</li>
+        </ul>
+    </ul>
+    <li>CSS Overview & HTML5 Elements</li>
+    <ul>
+        <li>HTML5 has many elements that enable developers to create well-structured and varied websites. CSS is a style
+            sheet language that defines how HTML elements are displayed. By using a combination of HTML5 and CSS,
+            developers can create rich, interactive applications. The HTML5 elements provide ways to separate a HTML
+            document into divisions, create headers and footers, define sections, create headings, and define the body
+            of the document. In addition, there are many HTML5 elements that allow the user to interact with the
+            website, inputting information in various formats like dates, times, numbers, email addresses and much more.
+            The data is sent to the browser by using HTML, and the design is applied to that data by using CSS. To be
+            able to create the structure and style you want for your site, you must be familiar with both languages.
+        </li>
+        <ul>
+            <li>Common HTML5 Tags and Structural Elements</li>
+            <li>Additional HTML Elements: HTML Fieldset and Legend Tag</li>
+            <li>Understanding CSS Selectors - Tags, IDs, and Classes</li>
+            <li>Advanced CSS Properties</li>
+        </ul>
+    </ul>
+    <li>JavaScript Programming for Web Applications</li>
+    <ul>
+        <li>You now have a website or Cloud App with structure and content from HTML, consistent style from CSS, and a
+            limited amount of interactivity for the user. To enhance the user experience and create a real wow factor,
+            you’re going to need JavaScript. With JavaScript, you can make your webpages dynamic by using features like
+            interactive forms, picture slideshows, and sophisticated menu systems.</li>
+        <ul>
+            <li>JavaScript Language: Overview and Syntax</li>
+            <li>JavaScript: Functions and Prototypes</li>
+            <li>JavaScript APIs</li>
+            <li>Client-Side JavaScript: with HTML</li>
+            <li>Insiders' Viewpoints: JavaScript Best Practices</li>
+            <li>Clinet-Side JavaScript: with DOM</li>
+            <li>JavaScript DOM Objects</li>
+        </ul>
+    </ul>
+    <li>Career Opportunities and Final Project</li>
+    <ul>
+        <li>Now that you have been equipped with the skills to use HTML, CSS, and JavaScript, you will have the
+            opportunity to practice and create a web application. In this scenario, you have been hired by a reputed
+            placement company, ABC Consultant, whose primary focus is to help people with less than 5 years of
+            experience to find a suitable placement in their industry. As a web developer, they have assigned you the
+            task of creating a portfolio for one of their clients as a single static webpage to share with the
+            prospective employers.</li>
+        <ul>
+            <li>Simple Interest Calculator</li>
+            <li>Single Page Portfolio Website</li>
+        </ul>
     </ul>
 </body>
+
 </html>
