adding content to gitHub.html

--- a/src/Course3/gitHub.html
+++ b/src/Course3/gitHub.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Git & Github Guide</title>
 </head>
+
 <body>
     <h1>Getting started with Git & Github</h1>
+    <ul>
+        <li>Git and GitHub Fundamentals</li>
+        <ul>
+            Application developers rarely work alone. Large web/cloud/mobile development and data science projects will
+            include many people – front-end developers, back-end developers, database administrators, repository
+            administrators, and others. Every change by every contributor must be tracked and controlled to enable
+            collaboration, accountability, and version management. This type of distributed version control is extremely
+            important when managing both small and large software projects. In this module, you will learn about some of
+            the popular version control tools, create a GitHub account, and use the GitHub web interface to create a
+            repository, add a file to it, and commit your changes. Branches are the heart of workflows in Git-based
+            version control systems like GitHub. You will also become familiar with creating and using branches and
+            merging your changes to the main branch.
+            <ul>
+                <li>Course Introduction</li>
+                <li>Overview of Git and Github</li>
+                <li>Introduction to GitHub</li>
+                <li>GitHub Repositories</li>
+                <li>GitHub - Getting Started</li>
+                <li>GitHub Branches</li>
+            </ul>
+        </ul>
+        <li>Git Commands and Managing GitHub Projects</li>
+        <ul>
+            <li>As you start working with GitHub repositories and automating workflows, using the web interface can be
+                limiting and more time-consuming. This is where Git commands come in. You can use it from your own
+                desktop, or a virtual desktop provided through the Cloud IDE - wherever you develop your code. In this
+                module, you will become familiar with and utilize various Git commands to clone and fork repositories,
+                as well as commit, push, and pull your changes using the command line.</li>
+            <ul>
+                <li>Overview of Git Workflows</li>
+                <li>Overview of Git Commands</li>
+                <li>Cloning and Forking GitHub Projects</li>
+                <li>Cloning versus Forking</li>
+                <li>Managing GitHub Projects</li>
+            </ul>
+        </ul>
+        <li>Final Project and Assessment</li>
+        <ul>
+            <li>Now that you are familiar working with GitHub repositories, Branches, and Git commands, in this module
+                you will apply your knowledge and skills to create a GitHub Project, add few files to it such as an
+                open-source license, and share it publicly.</li>
+            <ul>
+                <li>GitHub Copilot</li>
+                <li>Git CLI</li>
+            </ul>
+        </ul>
+    </ul>
 </body>
+
 </html>
