added javascript Essentials curriculum

--- a/src/Course4/javascriptEssentials.html
+++ b/src/Course4/javascriptEssentials.html
@@ -1,11 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascriptEssentials</title>
 </head>
+
 <body>
-    <h1>javascriptEssentials</h1>
+    <h1>JavaScript Programming Essentials</h1>
+    <ul>
+        <li>Introduction to JavaScript Development</li>
+        <ul>
+            <li>In this module, you will learn about introductory JavaScript development concepts. You will learn the
+                basics of software development, including the evolution of JavaScript with ES6, which standardized the
+                JavaScript language. You will explore variables and data types in JavaScript. You will acquire an
+                understanding of operators and expressions with the help of examples. You will study different types of
+                functions and concepts, such as closure and hoisting. You will get oriented to ECMAScript. Finally, you
+                will learn about events in JavaScript and their triggers to make dynamic web pages.</li>
+            <ul>
+                <li>Introduction to Development Concepts</li>
+                <li>Introduction to JavaScript and ES6</li>
+                <li>Data Types and Variables</li>
+                <li>Operators and Expressions</li>
+                <li>Control Flow and Conditional Statements</li>
+                <li>Looping and Iterations</li>
+                <li>Introduction to Functions and Types of Functions</li>
+                <li>ECMAScript Function Syntax and Return Statement</li>
+                <li>Function Closure and Function Hoisting</li>
+                <li>Events in JavaScript</li>
+            </ul>
+        </ul>
+        <li>Arrays and Objects in JavaScript</li>
+        <ul>
+            <li>In this module, you will learn about arrays and objects. You will first acquire a strong understanding
+                of arrays and gain practical skills in creating, manipulating, and iterating arrays. You will learn
+                about various JavaScript array methods and explore two-dimensional arrays. Additionally, you will gain a
+                clear understanding of classes and objects in JavaScript and learn about accessing object properties.
+                You’ll explore various string manipulation techniques and recognize the importance of the math object in
+                JavaScript and the use of date objects.</li>
+            <ul>
+                <li>Introduction to Arrays</li>
+                <li>Manipulating and Iterating Arrays</li>
+                <li>Array Methods</li>
+                <li>Working with Two-Dimensional Arrays</li>
+                <li>Classes and Objects in JavaScript</li>
+                <li>Accessing Object Properties</li>
+                <li>Introduction to String and String Manipulation</li>
+                <li>Introduction to Math and Date Objects</li>
+            </ul>
+        </ul>
+        <li>Working with DOM in JavaScript</li>
+        <ul>
+            <li>In this module, you will learn about debugging techniques and tools in JavaScript. In lesson 1, you will
+                explore more about the Try-catch block as a debugging tool. You will get oriented to the working of the
+                DOM
+                and its various nodes. You will study various methods to access and manipulate DOM elements. In lesson
+                2,
+                you will learn key components of the Browser Object Model (BOM) and how to use them in an HTML file.
+                Next,
+                you will understand different traversing methods and techniques using examples. You also learn how to
+                style
+                the DOM to change its visual representation.</li>
+            <ul>
+                <li>Introduction to Debugging in JavaScript</li>
+                <li>Introduction to the Document Object Model (DOM)</li>
+                <li>Manipulating DOM Elements</li>
+                <li>Introduction to Browser Object Model (BOM)</li>
+                <li>Traversing the DOM</li>
+                <li>Styling DOM Elements</li>
+            </ul>
+        </ul>
+        <li>JavaScript Async</li>
+        <ul>
+            <li>In this module, you will learn the importance of JavaScript Object Notion (JSON) in data interchange. In
+                lesson 1, you will also be able to differentiate between JSON and object. You will understand
+                asynchronous and synchronous programming using examples. You will also learn the key difference between
+                asynchronous and synchronous programming. You will explore the history and evolution of Asynchronous
+                JavaScript and XML (AJAX). You will acquire knowledge of best practices to implement AJAX in
+                development. You will also learn the features and functionalities of XMLHttpRequest with examples. In
+                lesson 2, you will learn callbacks using an example. You will also learn about promises, their three
+                states, syntax, and advantages. You will explore the characteristics of fetch API and its different
+                methods to interact with data on web resources. You will also learn about Axios and its syntax using an
+                example. You will be able to differentiate between Axios and fetch API.</li>
+                <ul>
+                    <li>Introduction to JSON</li>
+                    <li>Introduction to Async and Sync Execution</li>
+                    <li>Introduction to AJAX (Asynchronous JavaScript and XML)</li>
+                    <li>Http Requests with XMLHttpRequest (XHR)</li>
+                    <li>Understanding Promises for API</li>
+                    <li>Understanding the fetch() API</li>
+                    <li>Introduction to Axios</li>
+                </ul>
+        </ul>
+        <li>Final Project and Course Wrap-Up</li>
+        <ul>
+            <li>Develop an Application to Fetch Health Articles using XMLHttpRequest</li>
+            <li>Create a Weather App to Fetch Weather Data Using Fetch()</li>
+            <li>Develop an application for HealthCare Census</li>
+        </ul>
+    </ul>
 </body>
+
 </html>
