adding react content from curriculum

--- a/src/Course5/reactDevelopment.html
+++ b/src/Course5/reactDevelopment.html
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Development</title>
 </head>
+
 <body>
-    <h1>reactDevelopment</h1>
+    <h1>Developing Front-End Apps with React</h1>
+    <ul>
+        <li>Introduction to React and Class Components</li>
+        <ul>
+            <li>In this module, you begin exploring frameworks and their use in React web development. You will start by
+                comparing libraries and frameworks and then explore front-end frameworks further by learning about
+                prominent features of React. Additionally, the module will introduce the Vite build tool for React
+                project creation and guide you through setting up a React application. Understanding the directory
+                structure will streamline your workflow. Additionally, the module will cover EcmaScript6 (ES6), and JSX
+                fundamentals, including syntax and compilation, empowering you to create dynamic React components
+                effortlessly. Moving forward, you will delve into the concepts of state management, using props, and
+                handling events for each type. Finally, you will master the concept of state and props, understanding
+                how data flows within your components.</li>
+            <ul>
+                <li>Introduction to Front-End Frameworks and React</li>
+                <li>Understand React Structure</li>
+                <li>Expert Viewpoints: Using Front-end JavaScript Frameworks</li>
+                <li>Introduction to ES6</li>
+                <li>Introduction to JSX</li>
+                <li>Introduction to JSX</li>
+                <li>Introduction to Components</li>
+                <li>Working with React Class Components: Props and Event Handling</li>
+                <li>Introduction to States</li>
+                <li>Passing Data and States between Components</li>
+                <li>Class Component Lifecycle</li>
+                <ul>
+                    <li>Lab: Hello World with React</li>
+                    <li>Lab: Content Rating Application to Like or Dislike Content</li>
+                </ul>
+            </ul>
+        </ul>
+        <li>Understanding Function Components with Array and DOM Manipulation</li>
+        <ul>
+            <li>In this module, you will learn concepts for building dynamic React applications, including function
+                components, arrays, and using the virtual DOM. The first lesson begins with exploring props, default
+                props, and event handling to pass data and create interactions between components. Next, you'll delve
+                into component composition, learning its principles through practical examples. You'll also gain a solid
+                understanding of state management in function components. Additionally, you'll become proficient in
+                utilizing the useState hook to manipulate component states efficiently. In lesson two, you will explore
+                arrays in React components and the virtual DOM. By the end of this module, you will be able to build web
+                applications using React's array handling and the virtual DOM.</li>
+            <ul>
+                <li>Introduction to Function Components</li>
+                <li>Array in React and DOM Manipulation</li>
+                <li>Working with Function Components: Props and Event Handling</li>
+                <li>Component Composition</li>
+                <li>State Management in Function Components</li>
+                <li>Function Component Lifecycle</li>
+                <li>Testing React Components</li>
+                <li>Wokring with Arrays in React Components</li>
+                <li>Virtual DOM Manipulation in React</li>
+                <ul>
+                    <li>Lab:Function Component Event Planner Landing Page</li>
+                    <li>Lab:Todo List Application</li>
+                </ul>
+            </ul>
+        </ul>
+
+    </ul>
 </body>
+
 </html>
