--- a/src/Course5/reactDevelopment.html
+++ b/src/Course5/reactDevelopment.html
@@ -65,7 +65,48 @@
                 </ul>
             </ul>
         </ul>
-
+        <li>In-depth Understanding of Advanced React Functionality</li>
+        <ul>
+            <li>In the first lesson of this module, you will explore React hooks and their use for form management. You
+                will also learn how to retrieve data from third-party external services and process it using the forms
+                you build. In the second lesson, you learn Redux library core concepts, such as using actions, the Redux
+                store, and reducers to manage the state of entire applications. You also explore the advantages and
+                Redux use cases. The module will also address the challenges associated with using a synchronous tool
+                such as Redux and how to overcome them using libraries such as Saga and Thunk. Furthermore, the lesson
+                will introduce Redux Toolkit, a suite of utilities designed to simplify Redux tasks and streamline state
+                management in your React applications.</li>
+            <ul>
+                <li>Hooks</li>
+                <li>Side-effects Management and Custom Hook</li>
+                <li>Connecting React to External Services</li>
+                <li>Implementing Forms</li>
+                <li>Introduction to Redux</li>
+                <li>Essential Concepts of Redux</li>
+                <li>Async with Redux</li>
+                <li>Binding Redux and Flow</li>
+                <li>Introduction to Redux Toolkit</li>
+                <li>Lesson 1 Summary: Hooks and Form Management in React</li>
+                <li>Lesson 2 Summary: Application State Management with Redux</li>
+                <li>Lab: Fetch Data Using useFetch</li>
+                <li>Lab: Create Feedback Form for Survey</li>
+                <li>Lab: E-Commerce Data Rendering using React Toolkit</li>
+            </ul>
+        </ul>
+        <li>Practice, Final Project, and Peer Review Assignment</li>
+        <ul>
+            <li>You will create a React shopping cart app for your final project in the final module. You receive a
+                grade on the project through a peer evaluation. You will also evaluate one of your peer’s projects using
+                a rubric with objective grading criteria. You will apply and integrate many skills learned in the
+                instructional modules, including creating functional components and updating those components using
+                states and hooks. You will use Redux to manage states within your application using actions, reducers,
+                and the store. The project architecture allows you to compose components using a nesting structure. You
+                will also manage side effects with useEffect hooks. You will handle user events to render fetched data
+                from an array and trigger corresponding actions. This module has a practice project that will assist you
+                with developing the required components and functionality in the final project.</li>
+        </ul>
+        <li>Lab: Setting up the GitHub Environment</li>
+        <li>Practice Project: Conference Event Planner</li>
+        <li>Final Project: Paradise Nursery Shopping Application</li>
     </ul>
 </body>
 
