adding some content to nodeExpress.html

--- a/src/Course6/nodeExpress.html
+++ b/src/Course6/nodeExpress.html
@@ -6,6 +6,19 @@
     <title>nodeExpress</title>
 </head>
 <body>
-    <h1>nodeExpress</h1>
+    <h1>Developing Back-end Apps with Node.js and Express</h1>
+    <ul>
+        <li>Introduction to Server-Side JavaScript</li>
+        <ul>
+            <li>What is Back End Development?</li>
+            <li>Introduction to Node.js</li>
+            <li>Import and Require</li>
+            <li>Introduction to Server-Side JavaScript</li>
+            <li>Creating a Web Server with Node.js</li>
+            <li>Working with Node.js Modules</li>
+            <li>Overview of Node Packet Manager</li>
+            <li>First Server with ServerSide Java Script</li>
+        </ul>
+    </ul>
 </body>
 </html>
