content updated for Course6

--- a/src/Course6/nodeExpress.html
+++ b/src/Course6/nodeExpress.html
@@ -19,6 +19,38 @@
             <li>Overview of Node Packet Manager</li>
             <li>First Server with ServerSide Java Script</li>
         </ul>
+        <li>Asynchronous I/O with callback programming</li>
+            <ul>
+                <li>Asynchronous I/O with Callback Programming</li>
+                <li>Creating Callback Functions</li>
+                <li>Expert Viewpoints: Using Anonymous Callback Functions in Node.js</li>
+                <li>Issues with Callbacks</li>
+                <li>Promises</li>
+                <li>Working with JSON</li>
+                <li>Expert Viewpoints: Using JSON & JavaScript</li>
+                <li>Promises, async/await, and axios request in Node.js and Express</li>
+                <li>Lab: Promises and Call Back</li>
+                <li>Lab: Async Callback Programming</li>
+            </ul>
+        <li>Express Web Application Framework</li>
+        <ul>
+            <li>Introduction to Middleware & Routers</li>
+            <li>Extending Node.js</li>
+            <li>Introduction to Web Frameworks</li>
+            <li>Express Web Application Framework</li>
+            <li>Your First Express Web Application</li>
+            <li>Routing, Middleware, and Templating</li>
+            <li>Authentication and Authorization in Node.js</li>
+            <li>Authentication in Node JS</li>
+            <li>Express Best Practices</li>
+            <li>Lab: CRUD Operations with Node.js and Express</li>
+            <li>Lab: Express Server</li>
+        </ul>
+        <li>Final Project</li>
+        <ul>
+            <li>Lab: Friends List Application Using Express Server with JWT</li>
+            <li>Lab: Book Review Application</li>
+        </ul>
     </ul>
 </body>
 </html>
